Добавлен ServicesIntegrationTest — проверка реальной связки сервисов